Refactor DTO and deprecated templates
